--- a/Upcoming-match.html
+++ b/Upcoming-match.html
@@ -46,7 +46,7 @@
                 <div class="blog-nav">
                     <a id="Upcoming-Match-button" class="nav-button" href="">Upcoming Match</a>
                     <a  class="nav-button" href="">All Group</a>
-                    <a  class="nav-button" href="">Blog</a>
+                    <a  class="nav-button" href="http://127.0.0.1:5500/index.html">Blog</a>
                 </div>
                 <article class=" upcomaing-card">
                     <div class="upcomaing-card-item">
