--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="blog-container">
             <div class="blog-items">
                 <div class="blog-nav">
-                    <a id="Upcoming-Match" class="nav-button" href="">Upcoming Match</a>
+                    <a id="Upcoming-Match" class="nav-button" href=" http://127.0.0.1:5500/Upcoming-match.html">Upcoming Match</a>
                     <a id="All-Group" class="nav-button" href="">All Group</a>
                     <a id="Blog" class="nav-button" href="">Blog</a>
                 </div>
