--- a/Upcoming-match.html
+++ b/Upcoming-match.html
@@ -29,7 +29,7 @@
                     <span class="banner-info">Football (or soccer as the game is called in some parts of the world) has a long history. Football in its current form arose in England in the middle of the 19th century. But alternative versions of the game existed much earlier and are a part of the football history.</span>
                         <button class="banner-button button-banner">Watch Live<i class="fa-solid banner-button  fa-angle-right"></i></button>
                 </div>
-                <div class="banner-two">
+                <div class="banner-images">
                     <img  src="images/banner-2_-removebg-preview.png" alt="#">
                 </div>
             </div>
