--- a/All-group.html
+++ b/All-group.html
@@ -30,7 +30,7 @@
                         <button class="banner-button button-banner">Watch Live<i class="fa-solid banner-button  fa-angle-right"></i></button>
                 </div>
                 <div class="banner-images banner-two banner-three">
-                    <img src="images/banner-image.png" alt="#">
+                    <img src="images/banner-3-removebg-preview.png" alt="#">
                 </div>
             </div>
         </div>
