--- a/Upcoming-match.html
+++ b/Upcoming-match.html
@@ -29,7 +29,7 @@
                     <span class="banner-info">Football (or soccer as the game is called in some parts of the world) has a long history. Football in its current form arose in England in the middle of the 19th century. But alternative versions of the game existed much earlier and are a part of the football history.</span>
                         <button class="banner-button button-banner">Watch Live<i class="fa-solid banner-button  fa-angle-right"></i></button>
                 </div>
-                <div class="banner-images">
+                <div class="banner-images banner-two banner-three">
                     <img  src="images/banner-2_-removebg-preview.png" alt="#">
                 </div>
             </div>
@@ -44,8 +44,8 @@
         <div class="blog-container">
             <div class="blog-items">
                 <div class="blog-nav">
-                    <a id="Upcoming-Match-button" class="nav-button" href="">Upcoming Match</a>
-                    <a  class="nav-button" href="">All Group</a>
+                    <a id="Upcoming-Match-button" class="nav-button" href=" http://127.0.0.1:5500/Upcoming-match.html">Upcoming Match</a>
+                    <a  class="nav-button" href="http://127.0.0.1:5500/All-group.html">All Group</a>
                     <a  class="nav-button" href="http://127.0.0.1:5500/index.html">Blog</a>
                 </div>
                 <article class=" upcomaing-card">
