--- a/All-group.html
+++ b/All-group.html
@@ -48,85 +48,91 @@
                     <a id="All-Group" class="nav-button" href="http://127.0.0.1:5500/All-group.html">All Group</a>
                     <a id="Blog" class="nav-button" href="http://127.0.0.1:5500/index.html">Blog</a>
                 </div>
-                <article class="blogs">
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-1.jpg" alt="">
+                <article class="groups">
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-1.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>Brazil</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-2.jpg" alt="">
+                    </div>                                        
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-2.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>jurmaney</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-3.jpg" alt="">
+                    </div>                                        
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-3.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>Argentaina</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-4.jpg" alt="">
+                    </div>                                        
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-4.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>paru</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-5.jpg" alt="">
+                    </div>                                        
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-5.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>Nederland</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <div class="blog-image">
-                            <img src="images/blog-image-6.jpg" alt="">
+                    </div>                                        
+                    <div class="group">
+                        <div class="group-image">
+                            <img src="images/All-group-6.jpg" alt="">
                         </div>
-                        <div class="blog-info">
-                            <span>Transfer</span>
-                            <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="blog-duration">
-                                <i class="fa-regular fa-clock"></i>10h
-                                <i class="fa-regular fa-message"></i>23
+                        <div class="group-info">
+                            <span>Spean</span>
+                            <h3 class="group-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="group-duration">
+                                <i class="fa-regular fa-thumbs-up"></i>100k
+                                <i class="fa-regular fa-thumbs-down"></i>8
+                                <i class="fa-regular fa-heart"></i>10m
                             </div>
                         </div>
-                    </div>                    
+                    </div>                                        
                 </article>
             </div>
         </div>
