--- a/All-group.html
+++ b/All-group.html
@@ -46,7 +46,7 @@
                 <div class="blog-nav">
                     <a  class="nav-button" href=" http://127.0.0.1:5500/Upcoming-match.html">Upcoming Match</a>
                     <a id="All-group-button" class="nav-button" href="http://127.0.0.1:5500/All-group.html">All Group</a>
-                    <a id="Blog" class="nav-button" href="http://127.0.0.1:5500/index.html">Blog</a>
+                    <a  class="nav-button" href="http://127.0.0.1:5500/index.html">Blog</a>
                 </div>
                 <article class="groups">
                     <div class="group">
