--- a/Upcoming-match.html
+++ b/Upcoming-match.html
@@ -23,14 +23,16 @@
     --------------------->
     <header>
         <div class="container">
-            <div class="banner-items upcomaing-banner">
+            <div class="banner-items">
                 <div class="banner-deatails">
                     <h1 class="banner-title">The Greatest show on the earth</h1>
-                    <span class="banner-info">Football (or soccer as the game is called in some parts of the world) has a long history. Football in its current form arose in England in the middle of the 19th century. But alternative versions of the game existed much earlier and are a part of the football history.</span>
-                        <button class="banner-button button-banner">Watch Live<i class="fa-solid banner-button  fa-angle-right"></i></button>
+                    <span class="banner-info">Football (or soccer as the game is called in some parts of the world) has a long history. Football in its current form arose in England in the middle of the 19th century.</span>
+                    <div class="banner-button">
+                        <a >Watch Live<i class="fa-solid fa-angle-right"></i></a>
+                    </div>                        
                 </div>
                 <div class="banner-images banner-two banner-three">
-                    <img  src="images/banner-2_-removebg-preview.png" alt="#">
+                    <img src="images/banner-2_-removebg-preview.png" alt="#">
                 </div>
             </div>
         </div>
@@ -51,7 +53,8 @@
                 <article class=" upcomaing-card">
                     <div class="upcomaing-card-item">
                         <div class=" upcomaing-flag">
-                            <img  src="images/Flag.png" alt=""> vs
+                            <img  src="images/Flag.png" alt="">
+                            <span>Vs</span> 
                             <img  src="images/upcomaing-image.png" alt="">
                         </div>
                         <div class="upcoming-info" >
